Libraries/GTK/src/gtkextra/gtkplotdata.h

GtkWidget*	gtk_plot_data_new		(void);
GtkWidget* 	gtk_plot_data_new_function 	(GtkPlotFunc function);
/* draw last n points */
void 		gtk_plot_data_paint		(GtkPlotData *data);
void 		gtk_plot_data_draw_points	(GtkPlotData *data,
						 gint n);
void 		gtk_plot_data_draw_symbol	(GtkPlotData *data,
                                                 gdouble x, gdouble y);
/*------------------------------------------------------------------------*
 * Old implementation, we keep it for compatibility                       *
 *------------------------------------------------------------------------*/
void 		gtk_plot_data_set_points	(GtkPlotData *data,
						 gdouble *x, gdouble *y,
						 gdouble *dx, gdouble *dy,
                                                 gint num_points);
void 		gtk_plot_data_get_points	(GtkPlotData *data,
						 gdouble **x, gdouble **y,
						 gdouble **dx, gdouble **dy,
                                                 gint *num_points);
GtkPlotArray *	gtk_plot_data_set_x		(GtkPlotData *data,
						 gdouble *x);
GtkPlotArray *	gtk_plot_data_set_y		(GtkPlotData *data,
						 gdouble *y);
GtkPlotArray *	gtk_plot_data_set_z		(GtkPlotData *data,
						 gdouble *z);
GtkPlotArray *	gtk_plot_data_set_a		(GtkPlotData *data,
						 gdouble *z);
GtkPlotArray * 	gtk_plot_data_set_dx		(GtkPlotData *data,
						 gdouble *dx);
GtkPlotArray * 	gtk_plot_data_set_dy		(GtkPlotData *data,
						 gdouble *dy);
GtkPlotArray * 	gtk_plot_data_set_dz		(GtkPlotData *data,
						 gdouble *dz);
GtkPlotArray * 	gtk_plot_data_set_da		(GtkPlotData *data,
						 gdouble *da);
gdouble * 	gtk_plot_data_get_x		(GtkPlotData *data,
                                                 gint *num_points);
gdouble * 	gtk_plot_data_get_y		(GtkPlotData *data,
                                                 gint *num_points);
gdouble * 	gtk_plot_data_get_z		(GtkPlotData *data,
                                                 gint *num_points);
void		gtk_plot_data_set_name       		(GtkPlotData *data,
                                                	 const gchar *name);